<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.TopMusicActivity"
    style="@style/Widget.MaterialComponents.BottomAppBar"
    android:background="@color/backgound"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:id="@+id/linear1"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        android:layout_marginBottom="55dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:paddingLeft="-250dp"
            app:srcCompat="@drawable/icon_color" />



        <TextView
            android:id="@+id/text_rating_song"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/cabin"
            android:text="@string/song_rating"
            android:textSize="16sp"
            android:textStyle="bold" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="16dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/songList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/songs_top">

            </androidx.recyclerview.widget.RecyclerView>
        </androidx.core.widget.NestedScrollView>

        <TextView
            android:id="@+id/text_song_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/cabin"
            android:text="@string/song_view"
            android:textSize="16sp"
            android:textStyle="bold" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollView_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="10dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/songList_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/songs_top">

            </androidx.recyclerview.widget.RecyclerView>
        </androidx.core.widget.NestedScrollView>

    </LinearLayout>


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/backgound">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/home"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/homeButton"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="3dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/backgound"
                    app:srcCompat="@drawable/mdi_home"
                    app:tint="@color/green_milk" />

                <TextView
                    android:id="@+id/homeText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/home"
                    android:textAlignment="center"
                    android:textColor="@color/green_milk"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/music"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/loveButton"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="3dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/backgound"
                    app:srcCompat="@drawable/ic_heart_outline"
                    app:tint="@color/green_milk" />

                <TextView
                    android:id="@+id/lovetext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lovetext"
                    android:textAlignment="center"
                    android:textColor="@color/green_milk"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/top_music"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/top_music_btn"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="3dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/backgound"
                    app:srcCompat="@drawable/mdi_music_box_multiple"
                    app:tint="@color/green_milk" />

                <TextView
                    android:id="@+id/top_music_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/top_music"
                    android:textAlignment="center"
                    android:textColor="@color/green_milk" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/chord_btn"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="3dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/backgound"
                    app:srcCompat="@drawable/music_icon"
                    app:tint="@color/green_milk" />

                <TextView
                    android:id="@+id/chord_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hop_am"
                    android:textAlignment="center"
                    android:textColor="@color/green_milk" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/userView"
                    android:layout_width="32dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/backgound"
                    app:srcCompat="@drawable/ic_person"
                    app:tint="@color/green_milk" />

                <TextView
                    android:id="@+id/userText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user"
                    android:textAlignment="center"
                    android:textColor="@color/green_milk" />
            </LinearLayout>
        </LinearLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>