<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgound"
    tools:context=".views.UserActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="-250dp"
                app:srcCompat="@drawable/icon_color" />

            <TextView
                android:id="@+id/sing_out"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/custom_backgound"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/sign_out"
                android:textColor="@color/green_milk"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/sing_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/custom_backgound"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/sign_in_another"
                android:textColor="@color/green_milk"
                android:textSize="20sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:layout_marginBottom="64dp" />
        </LinearLayout>
    </ScrollView>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/backgound">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/home"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/homeButton"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="3dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/backgound"
                    app:srcCompat="@drawable/mdi_home"
                    app:tint="@color/green_milk" />

                <TextView
                    android:id="@+id/homeText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/home"
                    android:textAlignment="center"
                    android:textColor="@color/green_milk"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/music"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/loveButton"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="3dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/backgound"
                    app:srcCompat="@drawable/ic_heart_outline"
                    app:tint="@color/green_milk" />

                <TextView
                    android:id="@+id/lovetext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lovetext"
                    android:textAlignment="center"
                    android:textColor="@color/green_milk"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/recommend"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/recommendButton"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="3dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/backgound"
                    app:srcCompat="@drawable/mdi_music_box_multiple"
                    app:tint="@color/green_milk" />

                <TextView
                    android:id="@+id/recommendText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Recommend"
                    android:textAlignment="center"
                    android:textColor="@color/green_milk" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/userView"
                    android:layout_width="32dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/backgound"
                    app:srcCompat="@drawable/ic_person"
                    app:tint="@color/green_milk" />

                <TextView
                    android:id="@+id/userText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user"
                    android:textAlignment="center"
                    android:textColor="@color/green_milk" />
            </LinearLayout>
        </LinearLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</androidx.constraintlayout.widget.ConstraintLayout>