<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgound"
    tools:context=".views.ChordActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/introSliderViewPaper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.121"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/icon_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/toolbar"
        android:orientation="horizontal"
        android:layout_marginBottom="15dp"
        android:id="@+id/indicatorsContainer"
        android:gravity="center"
        />
    <androidx.viewpager2.widget.ViewPager2
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="12dp"
        android:overScrollMode="never"
        app:layout_constraintBottom_toTopOf="@+id/indicatorsContainer"
        android:id="@+id/introSliderViewPaper"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/backgound"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">



        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/home"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/homeButton"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="3dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/backgound"
                        app:srcCompat="@drawable/mdi_home"
                        app:tint="@color/green_milk" />

                    <TextView
                        android:id="@+id/homeText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/home"
                        android:textAlignment="center"
                        android:textColor="@color/green_milk"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/music"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/lovebtn"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="3dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/backgound"
                        app:srcCompat="@drawable/ic_heart_outline"
                        app:tint="@color/green_milk" />

                    <TextView
                        android:id="@+id/lovetext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lovetext"
                        android:textAlignment="center"
                        android:textColor="@color/green_milk"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/topmusic"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/top_music_btn"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="3dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/backgound"
                        app:srcCompat="@drawable/mdi_music_box_multiple"
                        app:tint="@color/green_milk" />

                    <TextView
                        android:id="@+id/top_music_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/top_music"
                        android:textAlignment="center"
                        android:textColor="@color/green_milk" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/chord_btn"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="3dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/backgound"
                        app:srcCompat="@drawable/music_icon"
                        app:tint="@color/green_milk" />

                    <TextView
                        android:id="@+id/chord_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/hop_am"
                        android:textAlignment="center"
                        android:textColor="@color/green_milk" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/userbtn"
                        android:layout_width="32dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:backgroundTint="@color/backgound"
                        app:srcCompat="@drawable/ic_person"
                        app:tint="@color/green_milk" />

                    <TextView
                        android:id="@+id/userText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/user"
                        android:textAlignment="center"
                        android:textColor="@color/green_milk" />
                </LinearLayout>
            </LinearLayout>
        </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.constraintlayout.widget.ConstraintLayout>